<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="390dp"
    android:background="@drawable/reduis_corner_bottom_sheet"
    android:orientation="vertical">
    <ImageView
        android:layout_width="80dp"
        android:layout_height="5dp"
        android:src="@drawable/ic_baseline_remove_24"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/remover_bar" />
    <TextView
        android:id="@+id/categoriesBottomSheetTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/women_s_fashion"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="0dp"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:paddingEnd="0dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/string_clothing"
                android:textColor="@color/gray3"
                android:textSize="14sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/shoes"
                android:textColor="@color/gray3"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/jewelry"
                android:textColor="@color/gray3"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/watches"
                android:textColor="@color/gray3"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/handbags"
                android:textColor="@color/gray3"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/accessories"
                android:textColor="@color/gray3"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/men_s_fashion"
                android:textColor="@color/gray3"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/girl_s_fashion"
                android:textColor="@color/gray3"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/boy_s_fashion"
                android:textColor="@color/gray3"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/boy_s_fashion"
                android:textColor="@color/gray3"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/boy_s_fashion"
                android:textColor="@color/gray3"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/boy_s_fashion"
                android:textColor="@color/gray3"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>