<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue_sky">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:padding="6dp">
        <ImageView
            android:id="@+id/back_id"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/back"/>

        <TextView
            android:id="@+id/favoriteText_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/cart"
            android:layout_centerHorizontal="true"
            android:textColor="@color/yellow"
            android:textSize="20sp" />
        <Button
            android:id="@+id/deleteFromCartButton_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/poppins_medium"
            android:textAlignment="viewEnd"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</RelativeLayout>